test for padding fixing button on mobile4

--- a/public/t1/css/style.css
+++ b/public/t1/css/style.css
@@ -547,3 +547,8 @@ h6,
 .bg-yellow {background-color: #FCD804 !important; }
 
 
+@media(max-width: 480px) {
+    .hide-on-mobile {
+        display: none !important;
+    }
+}
